[gd_scene load_steps=8 format=3 uid="uid://c45w12qbqt8p0"]

[ext_resource type="Texture2D" uid="uid://cg4uasacwppjb" path="res://resources/sprites/gui/Placek_LOGO.png" id="1_1whhs"]
[ext_resource type="Script" path="res://main_menu_button_manager.gd" id="2_wk6rj"]
[ext_resource type="Script" path="res://main_menu_button.gd" id="3_rbpxv"]
[ext_resource type="PackedScene" uid="uid://cms75vdmxf8wg" path="res://resources/3d/Placek.glb" id="4_othdc"]
[ext_resource type="Script" path="res://resources/3d/rotating_title.gd" id="5_6prxi"]

[sub_resource type="Gradient" id="Gradient_mf5uh"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w1biw"]
gradient = SubResource("Gradient_mf5uh")
width = 500
height = 500

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Buttons" type="Control" parent="CanvasLayer" node_paths=PackedStringArray("credit_screen_parent")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("2_wk6rj")
first_level_path = "res://main.tscn"
credit_screen_parent = NodePath("../Control2")

[node name="StartButton" type="Button" parent="CanvasLayer/Buttons" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 300.0
offset_right = 230.0
offset_bottom = 350.0
grow_vertical = 2
flat = true
script = ExtResource("3_rbpxv")
label = NodePath("StartLabel")

[node name="StartLabel" type="RichTextLabel" parent="CanvasLayer/Buttons/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://resources/fonts/monogram-extended.ttf][font size=60]  START[/font]"

[node name="OptionButton" type="Button" parent="CanvasLayer/Buttons" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 350.0
offset_right = 230.0
offset_bottom = 400.0
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("3_rbpxv")
label = NodePath("OptionLabel")

[node name="OptionLabel" type="RichTextLabel" parent="CanvasLayer/Buttons/OptionButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://resources/fonts/monogram-extended.ttf][font size=60]  OPTIONS[/font]"

[node name="CreditButton" type="Button" parent="CanvasLayer/Buttons" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 400.0
offset_right = 230.0
offset_bottom = 450.0
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("3_rbpxv")
label = NodePath("CreditLabel")

[node name="CreditLabel" type="RichTextLabel" parent="CanvasLayer/Buttons/CreditButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://resources/fonts/monogram-extended.ttf][font size=60]  CREDITS[/font]"

[node name="ExitButton" type="Button" parent="CanvasLayer/Buttons" node_paths=PackedStringArray("label")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 450.0
offset_right = 230.0
offset_bottom = 500.0
grow_vertical = 2
flat = true
alignment = 0
script = ExtResource("3_rbpxv")
label = NodePath("ExitLabel")

[node name="ExitLabel" type="RichTextLabel" parent="CanvasLayer/Buttons/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://resources/fonts/monogram-extended.ttf][font size=60]  EXIT[/font]"

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
z_index = -1
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
mouse_filter = 2

[node name="PlacekLogo" type="Sprite2D" parent="CanvasLayer/Control"]
position = Vector2(0, 100)
scale = Vector2(4, 4)
texture = ExtResource("1_1whhs")

[node name="Control2" type="Control" parent="CanvasLayer"]
visible = false
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CreditBackgroundPositioner" type="Control" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="CreditBackground" type="Sprite2D" parent="CanvasLayer/Control2/CreditBackgroundPositioner"]
position = Vector2(16.4062, 16.4375)
scale = Vector2(2.38238, 1.35425)
texture = SubResource("GradientTexture2D_w1biw")

[node name="CreditList" type="RichTextLabel" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 109.0
offset_right = -2.0
offset_bottom = -68.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font=res://resources/fonts/monogram-extended.ttf][font size=60]
[ul]THE GHOST OF GEORGE ORWELL[/ul]
[ul]THE GHOST OF CHRISTMAS PAST[/ul]
[ul]EVERYONE THAT HAS EVER LIVED[/ul]
[ul]THE GHOST OF CHRISTMAS FUTURE[/ul]
[ul]MY PARENTS(?)[/ul]
[ul]THE WHEAT THAT DIED TO BECOME MY BREAKFAST[/ul]"
tab_size = 1

[node name="CreditTitle" type="RichTextLabel" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 118.0
grow_horizontal = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center][font=res://resources/fonts/monogram-extended.ttf][font size=120][u]CREDITS[/u][/font]"

[node name="CreditExitButton" type="Button" parent="CanvasLayer/Control2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_right = 177.0
grow_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control2/CreditExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center][font=res://resources/fonts/monogram-extended.ttf][font size=60]EXIT[/font]"

[node name="Camera3D" type="Camera3D" parent="."]

[node name="Node3D" type="Node3D" parent="."]
script = ExtResource("5_6prxi")

[node name="Placek" parent="Node3D" instance=ExtResource("4_othdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.8, -3)

[node name="Placek2" parent="Node3D" instance=ExtResource("4_othdc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.25729, 0.8, 3)

[node name="Node3D" type="Node3D" parent="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="Placek" parent="Node3D/Node3D" instance=ExtResource("4_othdc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.8, -3)

[node name="Placek2" parent="Node3D/Node3D" instance=ExtResource("4_othdc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.25729, 0.8, 3)

[connection signal="mouse_entered" from="CanvasLayer/Buttons/StartButton" to="CanvasLayer/Buttons" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="CanvasLayer/Buttons/StartButton" to="CanvasLayer/Buttons" method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/OptionButton" to="CanvasLayer/Buttons" method="_on_option_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/CreditButton" to="CanvasLayer/Buttons" method="_on_credit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Buttons/ExitButton" to="CanvasLayer/Buttons" method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control2/CreditExitButton" to="CanvasLayer/Buttons" method="_on_credit_exit_button_pressed"]
